fix alignment issue

--- a/css/home-phone.css
+++ b/css/home-phone.css
@@ -36,7 +36,6 @@
 
     .link {
     	font-size: 16px;
-    	margin-left: .2em;
     	margin-right: .2em;
     }
 }
